--- a/Sleepwalkers/Main.storyboard
+++ b/Sleepwalkers/Main.storyboard
@@ -192,15 +192,15 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="VTx-M8-52t">
-                                <rect key="frame" x="37" y="442" width="300" height="62"/>
+                                <rect key="frame" x="37" y="467" width="300" height="62"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O3g-M9-4Sm">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O3g-M9-4Sm">
                                         <rect key="frame" x="125.5" y="0.0" width="49" height="23.5"/>
                                         <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="20"/>
                                         <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5CW-sR-OTN">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5CW-sR-OTN">
                                         <rect key="frame" x="125.5" y="38.5" width="49" height="23.5"/>
                                         <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="20"/>
                                         <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -211,12 +211,33 @@
                                     <constraint firstAttribute="width" constant="300" id="jfR-a0-JVr"/>
                                 </constraints>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap before  😴" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hl4-cm-STS">
+                                <rect key="frame" x="87" y="413" width="200" height="21"/>
+                                <fontDescription key="fontDescription" name="TrebuchetMS-Italic" family="Trebuchet MS" pointSize="20"/>
+                                <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mBs-hU-jX5">
+                                <rect key="frame" x="94" y="569" width="186" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="oc0-J1-Qn3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="18"/>
+                                <state key="normal" title="Get help from contact"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="VTx-M8-52t" firstAttribute="top" secondItem="oxa-VF-RER" secondAttribute="bottom" constant="54" id="30r-4d-R91"/>
+                            <constraint firstItem="VTx-M8-52t" firstAttribute="top" secondItem="oxa-VF-RER" secondAttribute="bottom" constant="79" id="30r-4d-R91"/>
+                            <constraint firstItem="hl4-cm-STS" firstAttribute="centerX" secondItem="mBs-hU-jX5" secondAttribute="centerX" id="5T4-pc-hd7"/>
+                            <constraint firstItem="hl4-cm-STS" firstAttribute="trailing" secondItem="oxa-VF-RER" secondAttribute="trailing" id="9NO-wV-M27"/>
+                            <constraint firstItem="VTx-M8-52t" firstAttribute="top" secondItem="hl4-cm-STS" secondAttribute="bottom" constant="33" id="GWz-My-fHX"/>
+                            <constraint firstItem="yS7-pe-Xew" firstAttribute="top" secondItem="mBs-hU-jX5" secondAttribute="bottom" constant="68" id="Rof-A0-JCd"/>
                             <constraint firstItem="oxa-VF-RER" firstAttribute="top" secondItem="Vf7-Tz-ylu" secondAttribute="bottom" constant="124" id="Y7b-PV-NZd"/>
+                            <constraint firstItem="hl4-cm-STS" firstAttribute="leading" secondItem="oxa-VF-RER" secondAttribute="leading" id="cBR-sD-ZFu"/>
+                            <constraint firstItem="mBs-hU-jX5" firstAttribute="top" secondItem="VTx-M8-52t" secondAttribute="bottom" constant="40" id="da4-q2-0hP"/>
                             <constraint firstItem="oxa-VF-RER" firstAttribute="centerX" secondItem="l2X-kT-r7W" secondAttribute="centerX" id="h0f-pi-Deo"/>
+                            <constraint firstItem="hl4-cm-STS" firstAttribute="top" secondItem="oxa-VF-RER" secondAttribute="bottom" constant="25" id="lZR-j7-aKj"/>
                             <constraint firstItem="VTx-M8-52t" firstAttribute="centerX" secondItem="l2X-kT-r7W" secondAttribute="centerX" id="qnf-zb-647"/>
                         </constraints>
                     </view>
@@ -236,12 +257,13 @@
                         <outlet property="contactNumber" destination="5CW-sR-OTN" id="Lhq-7D-oNU"/>
                         <outlet property="mainButton" destination="oxa-VF-RER" id="8xA-1d-j4P"/>
                         <outlet property="nameOfContactTextField" destination="O3g-M9-4Sm" id="O4z-Nu-LAa"/>
+                        <outlet property="sleepModeLabel" destination="hl4-cm-STS" id="6zr-eV-97O"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vNx-D4-XQQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="TWu-mp-tQV" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3038" y="107"/>
+            <point key="canvasLocation" x="3037.5999999999999" y="106.59670164917542"/>
         </scene>
         <!--Info View Controller-->
         <scene sceneID="2wv-Nx-SX5">
@@ -358,13 +380,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Sleepwalkers" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PY5-Nc-EXF">
-                                <rect key="frame" x="32" y="238" width="310" height="104"/>
-                                <color key="backgroundColor" red="0.31447619199999999" green="0.68990415329999999" blue="0.97651195530000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="35"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="APg-BO-tXg">
                                 <rect key="frame" x="130" y="370" width="114" height="42"/>
                                 <color key="backgroundColor" red="0.31447619199999999" green="0.68990415329999999" blue="0.97651195530000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -380,20 +395,38 @@
                                     <segue destination="BYZ-38-t0r" kind="show" identifier="profileSegue" id="alJ-Es-yhc"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4G8-PE-Kff">
+                                <rect key="frame" x="48" y="215" width="279" height="129"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Sleepwalkers" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PY5-Nc-EXF">
+                                        <rect key="frame" x="8" y="12" width="263" height="105"/>
+                                        <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="35"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.24829548597335815" green="0.70425444841384888" blue="0.98550087213516235" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="PY5-Nc-EXF" firstAttribute="leading" secondItem="4G8-PE-Kff" secondAttribute="leadingMargin" id="TDK-Md-hFQ"/>
+                                    <constraint firstItem="PY5-Nc-EXF" firstAttribute="top" secondItem="4G8-PE-Kff" secondAttribute="top" constant="12" id="k8e-WH-93S"/>
+                                    <constraint firstItem="PY5-Nc-EXF" firstAttribute="centerY" secondItem="4G8-PE-Kff" secondAttribute="centerY" id="v9r-PF-hdh"/>
+                                    <constraint firstItem="PY5-Nc-EXF" firstAttribute="trailing" secondItem="4G8-PE-Kff" secondAttribute="trailingMargin" id="yzn-9L-SfP"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="PY5-Nc-EXF" firstAttribute="top" secondItem="6qC-Cb-fos" secondAttribute="bottom" constant="174" id="093-C2-6eY"/>
-                            <constraint firstItem="PY5-Nc-EXF" firstAttribute="leading" secondItem="pHN-bW-wDl" secondAttribute="leadingMargin" constant="16" id="5rr-MS-P9X"/>
+                            <constraint firstItem="4G8-PE-Kff" firstAttribute="top" secondItem="6qC-Cb-fos" secondAttribute="bottom" constant="151" id="2uF-aV-jVy"/>
+                            <constraint firstItem="APg-BO-tXg" firstAttribute="top" secondItem="4G8-PE-Kff" secondAttribute="bottom" constant="26" id="ALp-TR-6eY"/>
+                            <constraint firstItem="4G8-PE-Kff" firstAttribute="centerX" secondItem="APg-BO-tXg" secondAttribute="centerX" constant="0.5" id="No4-Iw-7Q3"/>
                             <constraint firstItem="APg-BO-tXg" firstAttribute="centerX" secondItem="pHN-bW-wDl" secondAttribute="centerX" id="UrU-Um-8XG"/>
-                            <constraint firstItem="PY5-Nc-EXF" firstAttribute="centerX" secondItem="APg-BO-tXg" secondAttribute="centerX" id="fAx-qb-qoQ"/>
-                            <constraint firstItem="APg-BO-tXg" firstAttribute="top" secondItem="PY5-Nc-EXF" secondAttribute="bottom" constant="28" id="gNC-3w-vi1"/>
+                            <constraint firstItem="4G8-PE-Kff" firstAttribute="leading" secondItem="pHN-bW-wDl" secondAttribute="leadingMargin" constant="32" id="bhq-mB-jHs"/>
                             <constraint firstItem="fpv-CE-URv" firstAttribute="top" secondItem="APg-BO-tXg" secondAttribute="bottom" constant="255" id="yLI-Ql-vGf"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="fP5-hN-ARk"/>
                     <connections>
-                        <outlet property="mainLabel" destination="PY5-Nc-EXF" id="33v-sD-ndR"/>
+                        <outlet property="labelView" destination="4G8-PE-Kff" id="3ce-xL-x19"/>
                         <outlet property="nextButton" destination="APg-BO-tXg" id="jKL-2W-guh"/>
                     </connections>
                 </viewController>
