--- a/Sleepwalkers/Main.storyboard
+++ b/Sleepwalkers/Main.storyboard
@@ -135,7 +135,6 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="nextButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8dc-un-tTe"/>
                                     <segue destination="YkN-Lb-Un7" kind="show" identifier="goToMainSegue" id="pIJ-Gl-TKb"/>
                                 </connections>
                             </button>
@@ -162,7 +161,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2089" y="135"/>
+            <point key="canvasLocation" x="2006" y="-178"/>
         </scene>
         <!--loggedIn-->
         <scene sceneID="QIB-6y-alT">
@@ -248,7 +247,7 @@
                     <navigationItem key="navigationItem" id="35U-bv-foz">
                         <barButtonItem key="leftBarButtonItem" title="Settings" id="XQX-dz-RDk">
                             <connections>
-                                <segue destination="TWu-mp-tQV" kind="unwind" identifier="modifyContact" unwindAction="unwindToViewController:" id="SCJ-tT-GC7"/>
+                                <action selector="settingsButtonTapped:" destination="YkN-Lb-Un7" id="Vf5-U5-4qW"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Info" id="iIY-A1-xhj">
@@ -262,10 +261,10 @@
                         <outlet property="mainButton" destination="oxa-VF-RER" id="8xA-1d-j4P"/>
                         <outlet property="nameOfContactTextField" destination="O3g-M9-4Sm" id="O4z-Nu-LAa"/>
                         <outlet property="sleepModeLabel" destination="hl4-cm-STS" id="6zr-eV-97O"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="editInfo" id="CJ6-9K-RY6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vNx-D4-XQQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="TWu-mp-tQV" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="3037.5999999999999" y="106.59670164917542"/>
         </scene>
@@ -396,6 +395,7 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
+                                    <action selector="nextButtonTapped:" destination="KPa-Dh-Yfw" eventType="touchUpInside" id="mdK-2d-VFP"/>
                                     <segue destination="BYZ-38-t0r" kind="show" identifier="profileSegue" id="alJ-Es-yhc"/>
                                 </connections>
                             </button>
@@ -432,6 +432,7 @@
                     <connections>
                         <outlet property="labelView" destination="4G8-PE-Kff" id="3ce-xL-x19"/>
                         <outlet property="nextButton" destination="APg-BO-tXg" id="jKL-2W-guh"/>
+                        <segue destination="YkN-Lb-Un7" kind="show" identifier="loggedInSegue" id="acR-ef-IJ3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sfg-Rc-hFm" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -457,4 +458,8 @@
             <point key="canvasLocation" x="164" y="135.38230884557723"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="acR-ef-IJ3"/>
+        <segue reference="alJ-Es-yhc"/>
+    </inferredMetricsTieBreakers>
 </document>
